fix(CSS): Fix horizontal overflows for long line lengths in code blocks

--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -88,8 +88,8 @@ hr {
   }
 
   pre,
-  .highlight {
-    @apply my-8;
+  pre .highlight {
+    @apply my-8 overflow-auto;
   }
 
   .highlight {
